--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
-    "start": "node ./build/index.js"
+    "start": "node ./build/index.js",
+    "test": "jest src/tests"
   },
   "type": "module",
   "keywords": [],
@@ -16,13 +17,19 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.0",
+    "babel-jest": "^30.1.2",
+    "dotenv": "^17.2.2",
     "pdfreader": "^3.0.7",
     "xmldom": "^0.6.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.5.0",
     "@types/xmldom": "^0.1.34",
+    "jest": "^30.1.3",
+    "ts-jest": "^29.4.3",
     "typescript": "^5.9.2"
   },
   "files": [
