--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.0",
     "babel-jest": "^30.1.2",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.2",
     "pdfreader": "^3.0.7",
     "xmldom": "^0.6.0",
