Added researchgate cookie

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ELSEVIER_API_KEY=your_elsevier_api_key
 SCIHUB_COOKIE=your_scihub_cookie
+RESEARCHGATE_COOKIE=your_researchgate_cookie
 DOTENV_CONFIG_QUIET=true
