--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -10,7 +10,8 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
+    env:
+      ELSEVIER_API_KEY: ${{ secrets.ELSEVIER_API_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
